<resources>
    <string name="app_name">FilmBase</string>
    <string name="seen">Seen</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="comments">Comments</string>
    <string name="Genre">genre</string>
    <string name="all">All</string>
    <string name="want">Want</string>
    <string name="repick">Repick</string>
</resources>
